# opencomputers-programs

component-list/: Cargo.toml
component-list/src/: lib.rs  main.rs
hole-filler/: Cargo.toml
hole-filler/src/: lib.rs  main.rs
marx/: Cargo.toml
marx/.cargo/: config.toml
marx/src/: lib.rs  main.rs
programs-menu/: Cargo.toml
programs-menu/src/: lib.rs  main.rs
robot-manual-control/: Cargo.toml
robot-manual-control/.cargo/: config.toml
robot-manual-control/src/: lib.rs  main.rs
