[package]
name = "hole-filler"
version = "0.1.0"
authors = ["Christopher Head <chead@chead.ca>"]
edition = "2018"
description = "Fills in the big hole"
repository = "https://gitlab.com/Hawk777/opencomputers-programs"
license = "GPL-3.0-only"
keywords = ["minecraft", "oc-wasm", "opencomputers"]
categories = ["games"]
resolver = "2"

[dependencies.cassette]
version = "^0.2"

[dependencies.minicbor]
version = "^0.9"

[dependencies.oc-wasm-futures]
default-features = false
version = "^0.1"

[dependencies.oc-wasm-opencomputers]
default-features = false
version = "^0.2"

[dependencies.oc-wasm-safe]
default-features = false
features = ["panic"]
version = "^0.1"

[dependencies.once_cell]
default-features = false
version = "^1.8"

[dependencies.wee_alloc]
version = "^0.4"

[lib]
crate-type = ["cdylib"]

[patch.crates-io.oc-wasm-futures]
path = "../../../oc-wasm/rust/oc-wasm-futures"

[patch.crates-io.oc-wasm-opencomputers]
path = "../../../oc-wasm/rust/oc-wasm-opencomputers"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
